manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waittimes-app
  namespace: waittimes
  labels:
    app: waittimes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waittimes-app
  template:
    metadata:
      labels:
        app: waittimes-app
    spec:
      containers:
      - name: waittimes-app
        image: public.ecr.aws/b7c8g1g5/linuxeclipsed/wait-times:25.06.09
        ports:
        - containerPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waittimes-api
  namespace: waittimes
  labels:
    app: waittimes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waittimes-api
  template:
    metadata:
      labels:
        app: waittimes-api
    spec:
      containers:
      - name: waittimes-api
        image: public.ecr.aws/b7c8g1g5/linuxeclipsed/wait-times-api:latest
        ports:
        - containerPort: 8000
