manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waittimes-app
  namespace: waittimes
spec:
  type: ClusterIP
  selector:
    app: waittimes-app
  ports:
  - port: 5173
    targetPort: 5173
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: waittimes-api
  namespace: waittimes
spec:
  type: ClusterIP
  selector:
    app: waittimes-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: waittimes-db
  namespace: waittimes
spec:
  type: ClusterIP
  selector:
    app: waittimes-db
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
