manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waittimes-ingres
  namespace: waittimes
spec:
  ingressClassName: traefik
  rules:
  - host: waitingroom-display.tfhd.ad
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waittimes-app
                port:
                  number: 5173
